# Intervals

./: .gitignore  LICENSE  README.md  TODO.md  examples.py  intervals.py  pyproject.toml
src/intervals/: __init__.py  constants.py  intervals.py  utils.py
tests/: test_intervals.py  test_utils.py
