[tool.poetry]
name = "intervals"
version = "0.1.0"
description = "Python module supporting math intervals as an abstraction and superset of the range function."
authors = ["DancingGrumpyCat <echo.zimet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.0"
pytest = "^7.4.0"

[tool.ruff]
target-version = "py38"
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "E",
    "F",
    "FBT",
    "I",
    "ISC",
    "N",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "ANN101", # Require annotation of Self, cls
    "ANN102",
    "ANN401",
    "RUF001", # Ambiguous characters for strings
    "RUF002", # Ambiguous characters for docstring
    "RUF003", # Ambiguous characters for comments
    "TCH004",
    "TRY003",
]
exclude = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
